--- a/package.json
+++ b/package.json
@@ -73,10 +73,14 @@
 		]
 	},
 	"dependencies": {
+		"@emotion/react": "^11.10.6",
+		"@mantine/core": "^6.0.7",
+		"@mantine/hooks": "^6.0.7",
 		"prop-types": "^15.6.1",
 		"react": "^16.8.4",
 		"react-dom": "^16.8.4",
 		"react-polyfills": "0.0.1",
-		"react-router-dom": "^6.3.0"
+		"react-router-dom": "^6.3.0",
+		"tabler-icons-react": "^1.56.0"
 	}
 }
