--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
 		"prop-types": "^15.6.1",
 		"react": "^16.8.4",
 		"react-dom": "^16.8.4",
+		"react-hot-toast": "^2.4.1",
 		"react-polyfills": "0.0.1",
 		"react-router-dom": "^6.3.0",
 		"tabler-icons-react": "^1.56.0"
